--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </main>
 
     <footer>
-        <div style="font-size: large;">about</div>
-        <p>Although it is english, it's not just their accent that's different. Use the translator to see what the
+        <div style="font-size: large;">About</div>
+        <p>Americans and Britishers both speak english but it's not just their accent that's different. Use the
+            translator to see what the
             American has to say to what a British speaks.</p>
     </footer>
 
