--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
 
 <body>
     <nav>
-        <div style="font-size: 2rem; padding: 1rem;">
+        <div class="header" style="font-size: 2rem; padding: 1rem;">
             uk 2 us
         </div>
     </nav>
 
-    <main>
+    <main class="main">
         <textarea id="translate-input" placeholder="What does the Brit say?">
         </textarea>
         <button id="translate-button">Translate to American</button>
-        <div>And the American says👇</div>
+        <div class="text-converter">And the American says👇</div>
         <div id="translate-output" style="padding: 1rem; font-size: large;"></div>
+        
     </main>
 
     <footer>
-        <div style="font-size: large;">About</div>
+        <div class="about">About</div>
         <p>Americans and Britishers both speak english but it's not just their accent that's different. Use the
             translator to see what the
             American has to say to what a British speaks.</p>
     </footer>
+
+    <script src="main.js" type="text/javascript"></script>
 
 </body>
 
